--- a/config/config.yaml
+++ b/config/config.yaml
@@ -10,9 +10,10 @@ data_ingestion:
 
 prepare_base_model:
   root_dir: artifacts/prepare_base_model
-  base_model_path: artifacts/prepare_base_model/base_model.h5
-  updated_base_model_path: artifacts/prepare_base_model/base_model_updated.h5
+  base_model_path: artifacts/prepare_base_model/base_model.h5  # VG16 actual model
+  updated_base_model_path: artifacts/prepare_base_model/base_model_updated.h5 # custom end layer we added
 
+# h5 is to store large datasets
 
 prepare_callbacks:
   root_dir: artifacts/prepare_callbacks
